--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,17 @@
 $body-font-family: "Poppins";
 $heading-font-family: "Poppins";
-$btn-text-transform: "none"
+$btn-text-transform: "none";
+$btn-border-radius: 16px;
+$btn-focus-opacity: 0.4;
+$btn-hover-opacity: 0.2;
+$btn-font-weight: 400;
+$btn-letter-spacing: 0.03em;
+
+$text-field-border-radius: 20px;
+$text-field-outlined-fieldset-border: 2px solid;
+
+$snackbar-border-radius: 16px;
+$snackbar-content-padding: 16px;
+
+
+$card-border-radius: 16px;
