--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,13 @@ $btn-focus-opacity: 0.4;
 $btn-hover-opacity: 0.2;
 $btn-font-weight: 400;
 $btn-letter-spacing: 0.03em;
+$btn-sizes: (
+    'x-small': 20,
+    'small': 28,
+    'default': 40,
+    'large': 44,
+    'x-large': 52
+);
 
 $text-field-border-radius: 20px;
 $text-field-outlined-fieldset-border: 2px solid;
